src/test/deca/context/valid/created/class-fille-appel-methode-parent.deca
class A{
	void fonction(){}
}
class B extends A{

}
{
	B obj = new B();
	obj.fonction();
}