src/test/deca/context/invalid/created/wrong-object-declaration2.deca
class A{
	void x(){}
}
{
	A = new A();
}